--- a/TestApp/Test.storyboard
+++ b/TestApp/Test.storyboard
@@ -2,13 +2,12 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iXw-pM-Uzl">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Test Recorder View Controller-->
+        <!--Test View Controller-->
         <scene sceneID="kNa-rK-164">
             <objects>
-                <viewController id="iXw-pM-Uzl" customClass="TestRecorderViewController" customModule="TestApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="iXw-pM-Uzl" customClass="TestViewController" customModule="TestApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="v2h-V3-giF"/>
                         <viewControllerLayoutGuide type="bottom" id="8Wb-LY-vzV"/>
@@ -17,27 +16,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nY8-Yz-lOD" customClass="SCSwipeableFilterView">
-                                <rect key="frame" x="16" y="20" width="568" height="560"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GkV-lX-2nH">
                                 <rect key="frame" x="266" y="246" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xU8-Lo-hae">
+                                <rect key="frame" x="47" y="42" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="5" height="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="nY8-Yz-lOD" firstAttribute="top" secondItem="v2h-V3-giF" secondAttribute="bottom" id="GRy-TB-XHj"/>
-                            <constraint firstItem="8Wb-LY-vzV" firstAttribute="top" secondItem="nY8-Yz-lOD" secondAttribute="bottom" constant="20" id="elV-dN-5fS"/>
-                            <constraint firstItem="nY8-Yz-lOD" firstAttribute="trailing" secondItem="gqp-Y9-ZDL" secondAttribute="trailingMargin" id="roU-Tt-VYN"/>
-                            <constraint firstItem="nY8-Yz-lOD" firstAttribute="leading" secondItem="gqp-Y9-ZDL" secondAttribute="leadingMargin" id="zH2-3f-XbY"/>
-                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="filterView" destination="nY8-Yz-lOD" id="1Uv-yN-s0x"/>
+                        <outlet property="testView" destination="xU8-Lo-hae" id="8Uf-DB-gMf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rkz-Dx-bk0" userLabel="First Responder" sceneMemberID="firstResponder"/>
